# hvisor

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README  README-zh.md  README.md  Todo&Link.md  _cargo_test.sh  _compress.sh  _extract.sh  aarch64.json  aarch64.ld  aarch64.lds  armv8-baremetal-demo-rust-release.s  armv8-baremetal-demo-rust.s  build.rs  cmd  cp.sh  debug.gdb  diff.patch  fsimg  fsimg1  hvisor-elf.txt  hvisor.patch  jail  linker.ld  release.gdb  riscv64.dtb  riscv64.json  riscv64.ld  riscv64.lds  rust-toolchain.toml  start.sh
.cargo/: config  config.bak
.github/: labeler.yml
.github/actions/setup-aarch64-none-linux-gnu/: action.yml
.github/actions/setup-qemu/: action.yml
.github/actions/setup-riscv64-unknown-linux-gnu/: action.yml
.github/workflows/: ci.yml  issue-labeler.yml  labeler.yml
daemon/: Makefile  hvisor  hvisor.c  mevent.c  tools.c  virtio.c  virtio_blk.c  virtio_net.c
daemon/includes/: mevent.h  virtio.h  virtio_blk.h
demo/gic-demo/: gic-demo-linked.S
demo/hello/: Cargo.toml  Makefile  aarch64.json  inmate.lds.S
demo/hello/src/: entry.rs  logging.rs  main.rs  panic.rs
demo/hello/src/device/: mod.rs  pl011.rs
doc/: Register-Doc.md
driver/: Makefile  hvisor.h  main.c  main.ko
hvisor-dev/: .gitignore
hvisor-dev/platform/: common.mk
hvisor_ko/: hvisor.h  main.c
hvisor_user/: Cargo.toml  Makefile  hvisor.c  log.c  virtio.c
hvisor_user/includes/: log.h  virtio.h  virtio_blk.h
hvisor_user/src/: main.rs
hvisor_user/src/device/: blk.rs  mmio.rs  mod.rs  virtio.rs  virtqueue.rs
hvisor_user_old/: Makefile  hvisor  hvisor.c  mevent.c  tools.c  virtio.c  virtio_blk.c  virtio_net.c
hvisor_user_old/includes/: mevent.h  tools.h  virtio.h  virtio_blk.h  virtio_net.h
images/aarch64/devicetree/: linux1-v2.dts  linux1.dtb  linux1.dts  linux2.dtb  linux2.dts  linux2.json  linux3.dts  linux3.json  qemu-aarch64.dtb  qemu-aarch64.dts  qemu-ruxos.dts  qemu-ruxos.json  trans_file.sh  virtio_cfg2.json  virtio_cfg3.json  zcu102-nonroot-aarch64.dts  zcu102-root-aarch64.dts
images/loongarch64/devicetree/: Makefile  loongson3.dtsi  loongson3_ls7a.dts
images/riscv64/: linux.dtb  linux.dts  linux2.dtb  linux2.dts  linux3.dtb  linux3.dts  linux4.dtb  linux4.dts  os  os_ch5.dtb  os_ch5.dts  qemu.dtb  qemu.dts
images/riscv64/devicetree/: Makefile  iommu_test.dts  linux-aia.dts  linux.dts  linux1-aia.dts  linux1.dts  linux2-aia.dts  linux2.dts  linux2.json  linux3-aia.dts  linux3.dts  linux4.dts
imgs/config/: qemu-arm64-linux-demo.c  qemu-arm64-linux-demo.cell  qemu-arm64.c  qemu-arm64.cell
imgs/dts/: Makefile  qemu-aarch64-zone1.dts  riscv64.dts  root.dts
platform/aarch64/imx8mp/: board.rs  platform.mk
platform/aarch64/ok6254-c/: board.rs  linker.ld  platform.mk
platform/aarch64/ok62xx-c/: board.rs  linker.ld  platform.mk
platform/aarch64/phytium-pi/: board.rs  linker.ld  platform.mk
platform/aarch64/qemu-gicv2/: board.rs  platform.mk
platform/aarch64/qemu-gicv3/: board.rs  linker.ld  platform.mk
platform/aarch64/rk3568/: board.rs  linker.ld  platform.mk
platform/aarch64/rk3588/: board.rs  linker.ld  platform.mk
platform/aarch64/zcu102/: board.rs  linker.ld  platform.mk
platform/loongarch64/ls3a5000/: board.rs  linker.ld  platform.mk
platform/loongarch64/ls3a6000/: board.rs  linker.ld  platform.mk
platform/riscv64/: README.md
platform/riscv64/hifive-premier-p550/: board.rs  boot.scr  linker.ld  native.txt  platform.mk
platform/riscv64/megrez/: board.rs  boot.scr  boot.txt  linker.ld  native.txt  platform.mk
platform/riscv64/qemu copy/: board.rs  platform.mk
platform/riscv64/qemu-aia/: board.rs  platform.mk
platform/riscv64/qemu-plic/: README.md  board.rs  linker.ld  (+1 more)
scripts/: 3a5000-loongarch64.ld  3a5000-loongarch64.mk  qemu-aarch64.mk  qemu-riscv64.ld  qemu-riscv64.mk  qemu-x86_64.ld  qemu-x86_64.mk  zcu102-aarch64-fit.its  zcu102-aarch64.mk
scripts/host/: Makefile
src/: cell.rs  config.rs  config.rs.rej  consts.rs  control.rs  cpu_data.rs  error.rs  event.rs  header.rs  ivc.rs  logging.rs  main.rs  main.rs.rej  num.rs  panic.rs  percpu.rs  percpu.rs.rej  scheduler.rs  start.s  tests.rs  vcpu.rs  zone.rs
src/arch/: exception.rs  mod.rs
src/config/: tests.rs
src/device/: common.rs  eic7700_syscrg.rs  emu.rs  gicv3.rs  mod.rs  pci.rs  pl011.rs  virtio.rs  virtio_trampoline.rs
src/driver/: mod.rs
src/event/: tests.rs
src/hypercall/: mod.rs
src/lib/: mod.rs  print.rs
src/memory/: addr.rs  frame.rs  heap.rs  mapper.rs  mm.rs  mmio.rs  mod.rs  paging.rs
src/pci/: bridge.rs  endpoint.rs  mem_alloc.rs  mod.rs  pci.rs  pci_access.rs  pci_config.rs  pci_handler.rs  pci_mem.rs  pci_struct.rs  pci_test.rs  pcibar.rs  phantom_cfg.rs
src/percpu/: tests.rs
src/platform/: imx8mp_aarch64.rs  ls3a5000_loongarch64.rs  mod.rs  qemu_aarch64.rs  qemu_riscv64.rs  qemu_x86_64.rs  zcu102_aarch64.rs
src/zone/: tests.rs
test/: tcompiledtb.sh  tdownload_all.sh  tresult.sh  tstart.sh
test-img/: README.md  img.md  jailhouse.ko  jailhouse.patch
test-img/configs/: qemu-arm64-gic-demo.cell  qemu-arm64.cell
test-img/guest/: enable.sh  jailhouse  setup.sh
test-img/host/: jail-test.sh  test.sh
test/testcase/: tc_pwd.txt  tc_zone1_start.txt
tools/: Makefile  auto_hvisor_qemu_gicv3.sh  cargo_test.sh  clean.sh  compress.sh  event_monitor.c  extract.sh  gen_cargo_config.sh  gen_vscode_settings.sh  hvisor.c  license_checker.sh  log.c  mevent.c  read_features.sh  virtio.c  virtio_blk.c  virtio_net.c
tools/includes/: event_monitor.h  log.h  virtio.h  virtio_blk.h  virtio_net.h
(+387 files in other folders)
