[package]
name = "hvisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.10.0"
bitflags = "2.1"
bit_field = "0.10"
numeric-enum-macro = "0.2"
buddy_system_allocator = "0.8"
tock-registers = "0.8"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "03bd9909" }
fdt = { path = "./vendor/fdt" }
qemu-exit = "3.0.2"
cortex-a = "8.1.1"
cfg-if = "1.0"
bitvec = { version="1.0.1", default-features = false, features = ["atomic", "alloc"] }

[dependencies.fdt-rs]
version = "0.4.5"
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4.0"
psci = { version = "0.1.0", default-features = false, features = ["smc"]}

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
sbi-spec = { version = "0.0.8", features = ["legacy"]}
riscv = "0.13.0"
riscv_h = { package = "riscv", git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
riscv-decode = "0.2.1"
riscv-peripheral = "0.2.1"
riscv-pac = "0.2.0"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52.0"
x86_64 = "=0.14.10"
x2apic = "0.4.3"
raw-cpuid = "10.7.0"

[features]
############# general ##############
iommu = [] # supported by: aarch64
pci = [] # supported by: aarch64, loongarch64

############# aarch64 ##############
# irqchip driver
gicv2 = []
gicv3 = []

# uart driver
pl011 = []
xuartps = []
imx_uart = []
uart_16550 = []

# pagetable layout
pt_layout_qemu = []
pt_layout_rk3568 = []
pt_layout_rk3588 = []
pt_layout_zcu102 = []

# cpu
mpidr_rockchip = []

# uart infos
uart_base_rk3568 = []
uart_base_rk3588 = []
uart_base_ok6254 = []

############## riscv64 #############
# irqchip driver
plic = []
aia = []
aclint = []
# extensions
sstc = []
# platform specific
eic770x_soc = []

########### loongarch64 ############
# irqchip driver
loongson_7a2000 = []
# uart driver
loongson_uart = []


[profile.dev]
# panic = "abort" # avoid cargo test failure, this is a bug of cargo
debug = 2
opt-level = 0 