[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
bitflags = "2.1"
bit_field = "0.10"
numeric-enum-macro = "0.2"
tock-registers = "0.8"
lazy_static = { version = "1.4", features = ["spin_no_std"] }